--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "emailjs-com": "^2.3.2",
     "firebase": "^5.9.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.15.0",
